[package]
edition = "2021"
name = "csv_helper"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
csv = "*"
encoding_rs_io = "*"
serde = {version = "*", features = ["derive"]}

[dev-dependencies]
chrono = {version = "*", features = ["serde"]}
